tests/diagnostics/statements/bindings/duplicate_name/expect.txt
# exit: 1
input/main.coppice:3:5: error: duplicate binding 'x'
      x := 2
      ^
